--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - .env
     volumes: 
-      - wordpress:/var/www/wordpress
+      - wordpress:/wordpress
     networks:
       - Inception
     restart: on-failure
@@ -34,7 +34,7 @@ services:
     env_file:
       - .env
     volumes: 
-      - wordpress:/var/www/wordpress
+      - wordpress:/wordpress
     networks:
       - Inception
     restart: on-failure
